Fixes div alignment issues

--- a/eelo/core/css/guest.css
+++ b/eelo/core/css/guest.css
@@ -991,9 +991,10 @@
   #body-login fieldset {
 	width: auto;
 	margin: 0;
+	overflow-x: hidden;
   }
   #body-login .toggle-password {
-	right: 0%;
+	right: 4%;
 	top: 39%;
   }
   
@@ -1026,7 +1027,7 @@
   }
   #body-login .warning,
   #body-login .error {
-	width: 100%;
+	max-width: 100%;
 	color: white;
 	background-color: #fb3845;
 	font-size: 1.1em;
